# battery-butler

./: .bazelrc  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  GEMINI.md  MODULE.bazel  README.md  WORKER_SWARM_RECORD.md  bazel-battery-butler  bazel-bin  bazel-out  bazel-testlogs  build.gradle.kts  build_log.txt  compose_app_clean_log.txt  compose_app_screenshot_log.txt  connectivity_logs.txt  dependency_insight.txt  desktop_build_log.txt  desktop_build_log_2.txt  detekt.yml  fix_imports.py  fix_imports_fqn.py  fix_moved_imports.py  fix_names.py  gradle.properties  logcat_output.txt  moved_classes.txt  prepare_output.txt  prepare_output_2.txt  prepare_output_3.txt  prepare_output_4.txt  server_log.txt  settings.gradle.kts  unittest_build_output.txt  viewmodel_files.txt
.agent/: AGENTS.md  rules.md
.agent/workflows/: build_docker.md  build_ios_framework.md  ci-architecture.md  clean_bazel.md  debug_app.md  deploy_server.md  format_code.md  prepare-commit-then-push.md  run_android.md  run_desktop.md  run_ios_compose.md  run_ios_swiftui.md  run_server.md  run_tests.md  setup_aws.md  string_resources.md  update_docs.md  update_screenshots.md  validate_changes.md
.beads/: README.md  issues.jsonl
.claude/: settings.json
.claude/skills/: build-docker.md  build-ios-framework.md  clean-bazel.md  debug-app.md  deploy-server.md  format-code.md  merge-prs.md  prepare-commit-then-push.md  run-android.md  run-desktop.md  run-ios-compose.md  run-ios-swiftui.md  run-server.md  run-tests.md  setup-aws.md  string-resources.md  update-docs.md  update-screenshots.md  validate-changes.md
.github/: dependabot.yml
.github/workflows/: ci-trigger-auto-prs.yml  ci.yml  cleanup-stale-auto-prs.yml  deploy-server.yml  publish-android.yml  release-android.yml  release-server.yml  server-build.yml  server-deploy-prod.yml  server-deploy-staging.yml  server-destroy-legacy.yml  server-destroy.yml  server-rollback.yml  update-diagrams.yml  update-screenshots.yml
ai/: build.gradle.kts
android-app/: build.gradle.kts
android-screenshot-library/: build.gradle.kts
android-screenshot-tests/: build.gradle.kts  detekt-baseline.xml
app/: build.gradle.kts
buildSrc/: build.gradle.kts
buildSrc/config/mermaid/: mermaid.css
compose-app/: build.gradle.kts  detekt-baseline.xml  google-services.json  proguard-rules.pro
compose-app/src/androidMain/: AndroidManifest.xml
compose-resources/: build.gradle.kts
composeApp/: build.gradle.kts
data/: README.md  build.gradle.kts  detekt-baseline.xml
data-local/: README.md  build.gradle.kts
data-local/schemas/com.chriscartland.batterybutler.datalocal.room.AppDatabase/: 5.json
data-network/: README.md  build.gradle.kts
data/schemas/com.chriscartland.blanket.data.room.AppDatabase/: 3.json  4.json
design/: 020_Device_Details.md  030_Edit_Battery_Event.md  040_Add_Device.md  050_New_Device_Type.md  060_Device_Types.md  070_Edit_Device_Type.md
docs/: Architecture.md  Architecture_Reconciliation_Plan.md  Code_Share_Analysis.md  FEATURES.md  GOOGLE_PLAY_PUBLISHING.md  Navigation.md  Navigation_Structure.md  ProjectPlan.md
docs/architecture/: adr-001-usecase-dependencies.md  adr-002-test-coverage-strategy.md  adr-003-alpha-dependencies.md
docs/design/: 000_Home_Devices.md  010_Battery_History.md
docs/diagrams/: architecture.mmd  full_system_structure.mmd  kotlin_module_structure.mmd
domain/: README.md  build.gradle.kts  detekt-baseline.xml
fixtures/: build.gradle.kts
git/: install-hooks.sh
git/hooks/: post-commit
git/hooks/impl/: post-commit-impl.sh
gradle/: libs.versions.toml
ios-app-compose-ui/iosApp.xcodeproj/: project.pbxproj
ios-app-compose-ui/iosAppComposeUI.xcodeproj/: project.pbxproj
ios-app-swift-ui/: BatteryButlerApp.swift  BlanketApp.swift  ContentView.swift  DeviceRow.swift  FlowCollector.swift  README.md  ViewModelWrapper.swift
ios-app-swift-ui/Configuration/: Config.xcconfig
ios-app-swift-ui/Core/: FlowCollector.swift  ViewModelWrapper.swift
ios-app-swift-ui/Features/AddDevice/: AddDeviceScreen.swift  AddDeviceViewModelWrapper.swift
ios-app-swift-ui/iosApp/: ContentView.swift  iOSApp.swift
ios-app-swift-ui/iosAppSwiftUI.xcodeproj/: project.pbxproj
ios-integration/: build.gradle.kts
ios-swift-di/: build.gradle.kts
networking/: build.gradle.kts  detekt-baseline.xml
presentation-core/: build.gradle.kts  detekt-baseline.xml
presentation-feature/: build.gradle.kts  detekt-baseline.xml
presentation-model/: build.gradle.kts
presentation-models/: build.gradle.kts
presenter-core/: build.gradle.kts
presenter-feature/: build.gradle.kts
presenter-models/: build.gradle.kts
protos/: BUILD  BUILD.bazel
scripts/: BUILD.bazel  analyze-architecture.sh  analyze-imports.sh  analyze-metrics.sh  analyze-naming.sh  build-android.sh  build-desktop.sh  build-ios-framework.sh  build-ios.sh  build-server.sh  build-wasm.sh  clean.sh  connect_to_cloud.sh  debug_flow.sh  generate-protos.sh  generate_architecture_graph.py  get_db_credentials.sh  prepare-for-commit.sh  release-android.sh  release-server.sh  restart_server.sh  run-android-app.sh  run-android.sh  run-desktop-app.sh  run-e2e-debug-flow.sh  run-ios-app-compose-ui.sh  run-ios-app-swift-ui.sh  run-ios.sh  run-server.sh  run-unit-tests.sh  run-wasm.sh  spotless-apply.sh  spotless-check.sh  test.sh  test_cloud_connection.sh  update-diagrams.sh  update-screenshots.sh  validate-generated.sh  validate-screenshots.sh  validate.sh  (+1 more)
server/: AWS_SETUP.md  COST_ESTIMATE.md  README.md  build.gradle.kts  iam_policy.json  iam_policy_2026-02-07.json
server/app/: build.gradle.kts
server/data/: build.gradle.kts
server/domain/: build.gradle.kts
server/terraform/: compute.tf  database.tf  iam.tf  loadbalancer.tf  main.tf  network.tf  outputs.tf  variables.tf
shared/: build.gradle.kts
test-common/: build.gradle.kts
ui-core/: build.gradle.kts
ui-feature/: build.gradle.kts
usecase/: README.md  build.gradle.kts  detekt-baseline.xml
viewmodel/: build.gradle.kts  detekt-baseline.xml
(+670 files in other folders)
