module(
    name = "battery_butler",
    version = "1.0.0",
)

bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "29.0")
bazel_dep(name = "rules_swift", version = "3.4.2")
bazel_dep(name = "rules_java", version = "8.6.1")
bazel_dep(name = "apple_support", version = "1.11.1")
