sh_binary(
    name = "update_screenshots",
    srcs = ["update-screenshots.sh"],
)

sh_binary(
    name = "validate_screenshots",
    srcs = ["validate-screenshots.sh"],
)

sh_binary(
    name = "validate",
    srcs = ["validate.sh"],
)

sh_binary(
    name = "test",
    srcs = ["test.sh"],
)

sh_binary(
    name = "run_android_app",
    srcs = ["run-android-app.sh"],
)
